# figma-mcp-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  .pulserrc  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  figma-agent.yaml  package.json  pyproject.toml  pytest.ini  style-dictionary.config.js
.github/workflows/: sync_tokens.yml
cli/: figma_ds_sync.py
docs/: API.md  SETUP.md
examples/components/: Button.tsx  Card.tsx
scripts/: launch_claude_session.sh  setup_claude_memory_modes.sh
server/: component_push.py  components_parser.py  design_token_utils.py  figma_client.py  main.py  requirements.txt  style_dictionary_transformer.py
tests/: conftest.py
tests/cli/: test_figma_ds_sync.py
tests/integration/: test_end_to_end.py
tests/server/: test_design_token_utils.py  test_figma_client.py
tokens/: colors.json  spacing.json
